include_ver_2_beta_2/freetype.h

  
  typedef int  FT_Int;
  typedef unsigned int  FT_UInt;
  typedef signed long  FT_Long;
  typedef unsigned long  FT_ULong;
  typedef signed long  FT_Fixed;
  typedef struct  FT_Matrix_
  {
    FT_Fixed  xx, xy;
    FT_Fixed  yx, yy;
  } FT_Matrix;