lib/src/generated_bindings.dart


  /// @function:
  /// FT_Face_GetCharVariantIndex
  ///
  /// @description:
  /// Return the glyph index of a given character code as modified by the
  /// variation selector.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// charcode ::
  /// The character code point in Unicode.
  ///
  /// variantSelector ::
  /// The Unicode code point of the variation selector.
  ///
  /// @return:
  /// The glyph index.  0~means either 'undefined character code', or
  /// 'undefined selector code', or 'no variation selector cmap subtable',
  /// or 'current CharMap is not Unicode'.
  ///
  /// @note:
  /// If you use FreeType to manipulate the contents of font files directly,
  /// be aware that the glyph index returned by this function doesn't always
  /// correspond to the internal indices used within the file.  This is done
  /// to ensure that value~0 always corresponds to the 'missing glyph'.
  ///
  /// This function is only meaningful if
  /// a) the font has a variation selector cmap sub table, and
  /// b) the current charmap has a Unicode encoding.
  ///
  /// @since:
  /// 2.3.6
  int FT_Face_GetCharVariantIndex(
    FT_Face face,
    int charcode,
    int variantSelector,
  ) {
    return _FT_Face_GetCharVariantIndex(
      face,
      charcode,
      variantSelector,
    );
  }

  late final _FT_Face_GetCharVariantIndexPtr = _lookup<
          ffi.NativeFunction<FT_UInt Function(FT_Face, FT_ULong, FT_ULong)>>(
      'FT_Face_GetCharVariantIndex');
  late final _FT_Face_GetCharVariantIndex = _FT_Face_GetCharVariantIndexPtr
      .asFunction<int Function(FT_Face, int, int)>();

  /// @function:
  /// FT_Face_GetCharVariantIsDefault
  ///
  /// @description:
  /// Check whether this variation of this Unicode character is the one to
  /// be found in the charmap.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// charcode ::
  /// The character codepoint in Unicode.
  ///
  /// variantSelector ::
  /// The Unicode codepoint of the variation selector.
  ///
  /// @return:
  /// 1~if found in the standard (Unicode) cmap, 0~if found in the variation
  /// selector cmap, or -1 if it is not a variation.
  ///
  /// @note:
  /// This function is only meaningful if the font has a variation selector
  /// cmap subtable.
  ///
  /// @since:
  /// 2.3.6
  int FT_Face_GetCharVariantIsDefault(
    FT_Face face,
    int charcode,
    int variantSelector,
  ) {
    return _FT_Face_GetCharVariantIsDefault(
      face,
      charcode,
      variantSelector,
    );
  }

  late final _FT_Face_GetCharVariantIsDefaultPtr =
      _lookup<ffi.NativeFunction<FT_Int Function(FT_Face, FT_ULong, FT_ULong)>>(
          'FT_Face_GetCharVariantIsDefault');
  late final _FT_Face_GetCharVariantIsDefault =
      _FT_Face_GetCharVariantIsDefaultPtr.asFunction<
          int Function(FT_Face, int, int)>();

  /// @function:
  /// FT_Face_GetVariantSelectors
  ///
  /// @description:
  /// Return a zero-terminated list of Unicode variation selectors found in
  /// the font.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// @return:
  /// A pointer to an array of selector code points, or `NULL` if there is
  /// no valid variation selector cmap subtable.
  ///
  /// @note:
  /// The last item in the array is~0; the array is owned by the @FT_Face
  /// object but can be overwritten or released on the next call to a
  /// FreeType function.
  ///
  /// @since:
  /// 2.3.6
  ffi.Pointer<FT_UInt32> FT_Face_GetVariantSelectors(
    FT_Face face,
  ) {
    return _FT_Face_GetVariantSelectors(
      face,
    );
  }

  late final _FT_Face_GetVariantSelectorsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FT_UInt32> Function(FT_Face)>>(
          'FT_Face_GetVariantSelectors');
  late final _FT_Face_GetVariantSelectors = _FT_Face_GetVariantSelectorsPtr
      .asFunction<ffi.Pointer<FT_UInt32> Function(FT_Face)>();

  /// @function:
  /// FT_Face_GetVariantsOfChar
  ///
  /// @description:
  /// Return a zero-terminated list of Unicode variation selectors found for
  /// the specified character code.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// charcode ::
  /// The character codepoint in Unicode.
  ///
  /// @return:
  /// A pointer to an array of variation selector code points that are
  /// active for the given character, or `NULL` if the corresponding list is
  /// empty.
  ///
  /// @note:
  /// The last item in the array is~0; the array is owned by the @FT_Face
  /// object but can be overwritten or released on the next call to a
  /// FreeType function.
  ///
  /// @since:
  /// 2.3.6
  ffi.Pointer<FT_UInt32> FT_Face_GetVariantsOfChar(
    FT_Face face,
    int charcode,
  ) {
    return _FT_Face_GetVariantsOfChar(
      face,
      charcode,
    );
  }

  late final _FT_Face_GetVariantsOfCharPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<FT_UInt32> Function(FT_Face, FT_ULong)>>(
      'FT_Face_GetVariantsOfChar');
  late final _FT_Face_GetVariantsOfChar = _FT_Face_GetVariantsOfCharPtr
      .asFunction<ffi.Pointer<FT_UInt32> Function(FT_Face, int)>();

  /// @function:
  /// FT_Face_GetCharsOfVariant
  ///
  /// @description:
  /// Return a zero-terminated list of Unicode character codes found for the
  /// specified variation selector.
  ///
  /// @input:
  /// face ::
  /// A handle to the source face object.
  ///
  /// variantSelector ::
  /// The variation selector code point in Unicode.
  ///
  /// @return:
  /// A list of all the code points that are specified by this selector
  /// (both default and non-default codes are returned) or `NULL` if there
  /// is no valid cmap or the variation selector is invalid.
  ///
  /// @note:
  /// The last item in the array is~0; the array is owned by the @FT_Face
  /// object but can be overwritten or released on the next call to a
  /// FreeType function.
  ///
  /// @since:
  /// 2.3.6
  ffi.Pointer<FT_UInt32> FT_Face_GetCharsOfVariant(
    FT_Face face,
    int variantSelector,
  ) {
    return _FT_Face_GetCharsOfVariant(
      face,
      variantSelector,
    );
  }

  late final _FT_Face_GetCharsOfVariantPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<FT_UInt32> Function(FT_Face, FT_ULong)>>(
      'FT_Face_GetCharsOfVariant');
  late final _FT_Face_GetCharsOfVariant = _FT_Face_GetCharsOfVariantPtr
      .asFunction<ffi.Pointer<FT_UInt32> Function(FT_Face, int)>();

  /// @function:
  /// FT_MulDiv
  ///
  /// @description:
  /// Compute `(a*b)/c` with maximum accuracy, using a 64-bit intermediate
  /// integer whenever necessary.
  ///
  /// This function isn't necessarily as fast as some processor-specific
  /// operations, but is at least completely portable.
  ///
  /// @input:
  /// a ::
  /// The first multiplier.
  ///
  /// b ::
  /// The second multiplier.
  ///
  /// c ::
  /// The divisor.
  ///
  /// @return:
  /// The result of `(a*b)/c`.  This function never traps when trying to
  /// divide by zero; it simply returns 'MaxInt' or 'MinInt' depending on
  /// the signs of `a` and `b`.
  int FT_MulDiv(
    int a,
    int b,
    int c,
  ) {
    return _FT_MulDiv(
      a,
      b,
      c,
    );
  }

  late final _FT_MulDivPtr =
      _lookup<ffi.NativeFunction<FT_Long Function(FT_Long, FT_Long, FT_Long)>>(
          'FT_MulDiv');
  late final _FT_MulDiv =
      _FT_MulDivPtr.asFunction<int Function(int, int, int)>();

  /// @function:
  /// FT_MulFix
  ///
  /// @description:
  /// Compute `(a*b)/0x10000` with maximum accuracy.  Its main use is to
  /// multiply a given value by a 16.16 fixed-point factor.
  ///
  /// @input:
  /// a ::
  /// The first multiplier.
  ///
  /// b ::
  /// The second multiplier.  Use a 16.16 factor here whenever possible
  /// (see note below).
  ///
  /// @return:
  /// The result of `(a*b)/0x10000`.
  ///
  /// @note:
  /// This function has been optimized for the case where the absolute value
  /// of `a` is less than 2048, and `b` is a 16.16 scaling factor.  As this
  /// happens mainly when scaling from notional units to fractional pixels
  /// in FreeType, it resulted in noticeable speed improvements between
  /// versions 2.x and 1.x.
  ///
  /// As a conclusion, always try to place a 16.16 factor as the _second_
  /// argument of this function; this can make a great difference.
  int FT_MulFix(
    int a,
    int b,
  ) {
    return _FT_MulFix(
      a,
      b,
    );
  }

  late final _FT_MulFixPtr =
      _lookup<ffi.NativeFunction<FT_Long Function(FT_Long, FT_Long)>>(
          'FT_MulFix');
  late final _FT_MulFix = _FT_MulFixPtr.asFunction<int Function(int, int)>();

  /// @function:
  /// FT_DivFix
  ///
  /// @description:
  /// Compute `(a*0x10000)/b` with maximum accuracy.  Its main use is to
  /// divide a given value by a 16.16 fixed-point factor.
  ///
  /// @input:
  /// a ::
  /// The numerator.
  ///
  /// b ::
  /// The denominator.  Use a 16.16 factor here.
  ///
  /// @return:
  /// The result of `(a*0x10000)/b`.
  int FT_DivFix(
    int a,
    int b,
  ) {
    return _FT_DivFix(
      a,
      b,
    );
  }

  late final _FT_DivFixPtr =
      _lookup<ffi.NativeFunction<FT_Long Function(FT_Long, FT_Long)>>(
          'FT_DivFix');
  late final _FT_DivFix = _FT_DivFixPtr.asFunction<int Function(int, int)>();

  /// @function:
  /// FT_RoundFix
  ///
  /// @description:
  /// Round a 16.16 fixed number.
  ///
  /// @input:
  /// a ::
  /// The number to be rounded.
  ///
  /// @return:
  /// `a` rounded to the nearest 16.16 fixed integer, halfway cases away
  /// from zero.
  ///
  /// @note:
  /// The function uses wrap-around arithmetic.
  int FT_RoundFix(
    int a,
  ) {
    return _FT_RoundFix(
      a,
    );
  }

  late final _FT_RoundFixPtr =
      _lookup<ffi.NativeFunction<FT_Fixed Function(FT_Fixed)>>('FT_RoundFix');
  late final _FT_RoundFix = _FT_RoundFixPtr.asFunction<int Function(int)>();

  /// @function:
  /// FT_CeilFix
  ///
  /// @description:
  /// Compute the smallest following integer of a 16.16 fixed number.
  ///
  /// @input:
  /// a ::
  /// The number for which the ceiling function is to be computed.
  ///
  /// @return:
  /// `a` rounded towards plus infinity.
  ///
  /// @note:
  /// The function uses wrap-around arithmetic.
  int FT_CeilFix(
    int a,
  ) {
    return _FT_CeilFix(
      a,
    );
  }

  late final _FT_CeilFixPtr =
      _lookup<ffi.NativeFunction<FT_Fixed Function(FT_Fixed)>>('FT_CeilFix');
  late final _FT_CeilFix = _FT_CeilFixPtr.asFunction<int Function(int)>();

  /// @function:
  /// FT_FloorFix
  ///
  /// @description:
  /// Compute the largest previous integer of a 16.16 fixed number.
  ///
  /// @input:
  /// a ::
  /// The number for which the floor function is to be computed.
  ///
  /// @return:
  /// `a` rounded towards minus infinity.
  int FT_FloorFix(
    int a,
  ) {
    return _FT_FloorFix(
      a,
    );
  }

  late final _FT_FloorFixPtr =
      _lookup<ffi.NativeFunction<FT_Fixed Function(FT_Fixed)>>('FT_FloorFix');
  late final _FT_FloorFix = _FT_FloorFixPtr.asFunction<int Function(int)>();

  /// @function:
  /// FT_Vector_Transform
  ///
  /// @description:
  /// Transform a single vector through a 2x2 matrix.
  ///
  /// @inout:
  /// vector ::
  /// The target vector to transform.
  ///
  /// @input:
  /// matrix ::
  /// A pointer to the source 2x2 matrix.
  ///
  /// @note:
  /// The result is undefined if either `vector` or `matrix` is invalid.
  void FT_Vector_Transform(
    ffi.Pointer<FT_Vector> vector,
    ffi.Pointer<FT_Matrix> matrix,
  ) {
    return _FT_Vector_Transform(
      vector,
      matrix,
    );
  }
